// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchPage > does not show the debug button when VITE_DEBUG_MODE is false 1`] = `
<DocumentFragment>
  <div
    class="sc-beySPh ijVLbz"
  >
    <header
      class="_header_c7ee54"
      role="banner"
    >
      <div
        class="sc-iBdnpw iSWxFd"
      >
        <nav>
          <ul
            class="_headerNavList_c7ee54"
          >
            <li
              class="_headerNavLeftMargin_c7ee54"
            >
              <a
                href="https://inspection.canada.ca/"
                title="ACIA | CFIA"
              >
                <img
                  alt="CFIA logo"
                  aria-label="Link to CFIA | Lien à l'ACIA"
                  src="/src/assets/CFIA_Banner.png"
                  style="height: 50px;"
                />
              </a>
            </li>
            <li
              class="_headerRightText_c7ee54"
            >
              Alpha Version
            </li>
          </ul>
        </nav>
      </div>
    </header>
    <div
      class="sc-gLLuof jXjFEF"
    >
      <div>
        <a
          data-testid="cfia-logo"
          href="/"
          title="ACIA | CFIA"
        >
          <img
            alt="CFIA logo"
            src="/src/assets/CFIA_SmartSearch_Logo.png"
            style="height: 110px;"
          />
        </a>
      </div>
      <div
        class="sc-hLQSwg gdFcDT"
      >
        <form
          class="sc-fsYfdN gMdzwM"
        >
          <div
            class="sc-qZrbh hoLtJU"
          >
            <svg
              data-testid="search-icon"
              fill="currentColor"
              height="1em"
              id="fa-arrow-right"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              />
            </svg>
            <input
              data-testid="search-input"
              placeholder="Type to search..."
              value=""
            />
            <button
              class="sc-ktwOfi ddPxBG button"
              data-testid="submit-button"
              type="submit"
            >
              <svg
                fill="currentColor"
                height="1em"
                id="fa-arrow-right"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(5, 72, 108);"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
                />
              </svg>
            </button>
          </div>
        </form>
      </div>
    </div>
    <div
      class="sc-jsEeTM dRvvwI"
    />
  </div>
</DocumentFragment>
`;

exports[`SearchPage > shows the debug button when VITE_DEBUG_MODE is true 1`] = `
<DocumentFragment>
  <div
    class="sc-beySPh ijVLbz"
  >
    <header
      class="_header_c7ee54"
      role="banner"
    >
      <div
        class="sc-iBdnpw iSWxFd"
      >
        <nav>
          <ul
            class="_headerNavList_c7ee54"
          >
            <li
              class="_headerNavLeftMargin_c7ee54"
            >
              <a
                href="https://inspection.canada.ca/"
                title="ACIA | CFIA"
              >
                <img
                  alt="CFIA logo"
                  aria-label="Link to CFIA | Lien à l'ACIA"
                  src="/src/assets/CFIA_Banner.png"
                  style="height: 50px;"
                />
              </a>
            </li>
            <li
              class="_headerRightText_c7ee54"
            >
              Alpha Version
            </li>
          </ul>
        </nav>
      </div>
      <svg
        data-testid="debug-button"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        style="color: black; cursor: pointer; z-index: 1001; position: absolute; margin: 10px;"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"
        />
      </svg>
    </header>
    <div
      class="sc-gLLuof jXjFEF"
    >
      <div>
        <a
          data-testid="cfia-logo"
          href="/"
          title="ACIA | CFIA"
        >
          <img
            alt="CFIA logo"
            src="/src/assets/CFIA_SmartSearch_Logo.png"
            style="height: 110px;"
          />
        </a>
      </div>
      <div
        class="sc-hLQSwg gdFcDT"
      >
        <form
          class="sc-fsYfdN gMdzwM"
        >
          <div
            class="sc-qZrbh hoLtJU"
          >
            <svg
              data-testid="search-icon"
              fill="currentColor"
              height="1em"
              id="fa-arrow-right"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              />
            </svg>
            <input
              data-testid="search-input"
              placeholder="Type to search..."
              value=""
            />
            <button
              class="sc-ktwOfi ddPxBG button"
              data-testid="submit-button"
              type="submit"
            >
              <svg
                fill="currentColor"
                height="1em"
                id="fa-arrow-right"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(5, 72, 108);"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
                />
              </svg>
            </button>
          </div>
        </form>
      </div>
    </div>
    <div
      class="sc-jsEeTM dRvvwI"
    />
  </div>
</DocumentFragment>
`;

exports[`SearchPage > toggles the debug panel when the debug button is clicked 1`] = `
<DocumentFragment>
  <div
    class="sc-beySPh ijVLbz"
  >
    <header
      class="_header_c7ee54"
      role="banner"
    >
      <div
        class="sc-iBdnpw iSWxFd"
      >
        <nav>
          <ul
            class="_headerNavList_c7ee54"
          >
            <li
              class="_headerNavLeftMargin_c7ee54"
            >
              <a
                href="https://inspection.canada.ca/"
                title="ACIA | CFIA"
              >
                <img
                  alt="CFIA logo"
                  aria-label="Link to CFIA | Lien à l'ACIA"
                  src="/src/assets/CFIA_Banner.png"
                  style="height: 50px;"
                />
              </a>
            </li>
            <li
              class="_headerRightText_c7ee54"
            >
              Alpha Version
            </li>
          </ul>
        </nav>
      </div>
      <svg
        data-testid="debug-button"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        style="color: black; cursor: pointer; z-index: 1001; position: absolute; margin: 10px;"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"
        />
      </svg>
      <div
        class="sc-irLvIq hkeVyu"
        data-testid="debug-panel"
      >
        <h4
          style="color: black;"
        >
          Debug Panel
        </h4>
        <div
          class="sc-csKJxZ ilyJmt"
        >
          <label
            class="sc-eTNRI cNqKFl"
          >
            <input
              data-testid="search-source-ailab"
              type="radio"
              value="ailab"
            />
            <span
              class="sc-brSamD fpMuCT"
            >
              Use AI Lab Search
            </span>
          </label>
          <label
            class="sc-eTNRI cNqKFl"
          >
            <input
              checked=""
              data-testid="search-source-azure"
              type="radio"
              value="azure"
            />
            <span
              class="sc-brSamD fpMuCT"
            >
              Use Azure AI Search
            </span>
          </label>
          <label
            class="sc-eTNRI cNqKFl"
          >
            <input
              data-testid="search-source-llama"
              type="radio"
              value="llama"
            />
            <span
              class="sc-brSamD fpMuCT"
            >
              Use AI Lab Llama Search
            </span>
          </label>
          <label
            class="sc-eTNRI cNqKFl"
          >
            <input
              data-testid="search-source-static"
              type="radio"
              value="simulated"
            />
            <span
              class="sc-brSamD fpMuCT"
            >
              Use Simulated Data
            </span>
          </label>
        </div>
      </div>
    </header>
    <div
      class="sc-gLLuof jXjFEF"
    >
      <div>
        <a
          data-testid="cfia-logo"
          href="/"
          title="ACIA | CFIA"
        >
          <img
            alt="CFIA logo"
            src="/src/assets/CFIA_SmartSearch_Logo.png"
            style="height: 110px;"
          />
        </a>
      </div>
      <div
        class="sc-hLQSwg gdFcDT"
      >
        <form
          class="sc-fsYfdN gMdzwM"
        >
          <div
            class="sc-qZrbh hoLtJU"
          >
            <svg
              data-testid="search-icon"
              fill="currentColor"
              height="1em"
              id="fa-arrow-right"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              />
            </svg>
            <input
              data-testid="search-input"
              placeholder="Type to search..."
              value=""
            />
            <button
              class="sc-ktwOfi ddPxBG button"
              data-testid="submit-button"
              type="submit"
            >
              <svg
                fill="currentColor"
                height="1em"
                id="fa-arrow-right"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(5, 72, 108);"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
                />
              </svg>
            </button>
          </div>
        </form>
      </div>
    </div>
    <div
      class="sc-jsEeTM dRvvwI"
    />
  </div>
</DocumentFragment>
`;

exports[`SearchPage > toggles the debug panel when the debug button is clicked 2`] = `
<DocumentFragment>
  <div
    class="sc-beySPh ijVLbz"
  >
    <header
      class="_header_c7ee54"
      role="banner"
    >
      <div
        class="sc-iBdnpw iSWxFd"
      >
        <nav>
          <ul
            class="_headerNavList_c7ee54"
          >
            <li
              class="_headerNavLeftMargin_c7ee54"
            >
              <a
                href="https://inspection.canada.ca/"
                title="ACIA | CFIA"
              >
                <img
                  alt="CFIA logo"
                  aria-label="Link to CFIA | Lien à l'ACIA"
                  src="/src/assets/CFIA_Banner.png"
                  style="height: 50px;"
                />
              </a>
            </li>
            <li
              class="_headerRightText_c7ee54"
            >
              Alpha Version
            </li>
          </ul>
        </nav>
      </div>
      <svg
        data-testid="debug-button"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        style="color: black; cursor: pointer; z-index: 1001; position: absolute; margin: 10px;"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"
        />
      </svg>
    </header>
    <div
      class="sc-gLLuof jXjFEF"
    >
      <div>
        <a
          data-testid="cfia-logo"
          href="/"
          title="ACIA | CFIA"
        >
          <img
            alt="CFIA logo"
            src="/src/assets/CFIA_SmartSearch_Logo.png"
            style="height: 110px;"
          />
        </a>
      </div>
      <div
        class="sc-hLQSwg gdFcDT"
      >
        <form
          class="sc-fsYfdN gMdzwM"
        >
          <div
            class="sc-qZrbh hoLtJU"
          >
            <svg
              data-testid="search-icon"
              fill="currentColor"
              height="1em"
              id="fa-arrow-right"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              />
            </svg>
            <input
              data-testid="search-input"
              placeholder="Type to search..."
              value=""
            />
            <button
              class="sc-ktwOfi ddPxBG button"
              data-testid="submit-button"
              type="submit"
            >
              <svg
                fill="currentColor"
                height="1em"
                id="fa-arrow-right"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(5, 72, 108);"
                viewBox="0 0 448 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
                />
              </svg>
            </button>
          </div>
        </form>
      </div>
    </div>
    <div
      class="sc-jsEeTM dRvvwI"
    />
  </div>
</DocumentFragment>
`;
